# promptInjector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-readme.md  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  pylint.yml
src/promptinjector/: __init__.py  cli.py
src/promptinjector/core/: __init__.py  analyzer.py  models.py  runner.py
src/promptinjector/injections/: __init__.py  library.py
src/promptinjector/injections/payloads/: context_manipulation.yaml  delimiter_attacks.yaml  encoding_bypass.yaml  indirect_injection.yaml  instruction_override.yaml  jailbreak.yaml  role_play.yaml  system_prompt_extraction.yaml
src/promptinjector/targets/: __init__.py  base.py  google_gem.py  openai_gpt.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_library.py  test_models.py  test_runner.py  test_targets.py
